force-app/main/default/objects/sixsense__X6sense_Company_Score__c/sixsense__X6sense_Company_Score__c.object-meta.xml
<CustomObject>
    <label>6sense Company Score</label>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Company Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>