force-app/main/default/objects/sixsense__X6sense_Company_Score__c/fields/sixsense__Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Intent_Score__c</fullName>
    <label>Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>