force-app/main/default/objects/sixsense__X6sense_Company_Score__c/fields/sixsense__NewCompanyProductKey__c.field-meta.xml
<CustomField>
    <fullName>sixsense__NewCompanyProductKey__c</fullName>
    <externalId>true</externalId>
    <label>NewCompanyProductKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>