force-app/main/default/objects/sixsense__X6sense_Company_Score__c/fields/sixsense__Product_Id__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>sixsense__X6sense_Product__c</referenceTo>
    <relationshipName>X6sense_Company_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>