force-app/main/default/objects/sixsense__X6sense_Company_Score__c/fields/sixsense__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>sixsense__Product_Name__c</fullName>
    <description>Plain text name of the product related to this score.</description>
    <label>Product Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>